<resources>
    <string name="app_name">MyDiary</string>
    <string name="splash_title">MyDiary</string>
    <string name="createacc">Create your account</string>
    <string name="login">Login to your account</string>
    <string name="create">CREATE ACCOUNT</string>
    <string name="loginbtn">LOGIN</string>
    <string name="account">Already have an account? <b>Login</b></string>
    <string name="account1">Don\'t have an account?  <b>Signup</b></string>
    <string name="add">Add New Entry</string>
    <string name="notes">Your Entries</string>
    <string name="delete">Delete Entry</string>
    <string name="user_title">MyDiary User Agreement</string>
    <string name="user_ag1">This User Agreement is a legal contract between you and MyDiary App. By accessing or using the MyDiary app and
    its services, you agree to be bound by the terms and conditions of this Agreement. If you do not agree with these terms, you will
    not be able to use the Service.</string>
    <string name="reg1">1.1 You must be at least 13 years old to use the MyDiary App. </string>
    <string name="reg2">1.2 You agree to provide accurate and complete information during the registration process. </string>
    <string name="reg3">1.3 You are responsible for maintaining the confidentiality of your account information. </string>
    <string name="con1">1.1 You own the content you create using the MyDiary App.</string>
    <string name="con2">1.2 MyDiary App does not claim ownership of your content, but you grant MyDiary App a license to use,
        display, and distribute your content as necessary for the provision of the service.</string>
    <string name="pro1">1.1 You may not upload, post, or transmit any content that is unlawful, harmful, threatening, abusive, or
        otherwise objectionable.</string>
    <string name="pro2">1.2 MyDiary App reserves the right to remove any content that violates these terms.</string>
    <string name="sec1">1.1 You are responsible for maintaining the security of your account.</string>
    <string name="sec2">1.2 Notify MyDiary App immediately of any unauthorized use or security breaches.</string>
    <string name="use1">1.1 You agree not to use the MyDiary App for any illegal or unauthorized purpose.</string>
    <string name="use2">1.2 You will not use the MyDiary App to violate any laws or regulations in your jurisdiction.</string>
    <string name="end">By using the MyDiary App, you acknowledge that you have read, understood, and agree to be bound by the
        terms and conditions of this Agreement.</string>
    <string name="private_place">a private place for your</string>
    <string name="private_place2">thoughts</string>
    <string name="photos"><b>ADD PHOTOS</b> to speak</string>
    <string name="photos2">a thousand words</string>
    <string name="capture">Only 5 minutes every day, capture your life moments</string>
</resources>