<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEECF8"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="224dp"
            android:layout_height="224dp"
            app:srcCompat="@drawable/user_login"
            android:layout_marginTop="-150dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/login"
            android:textSize="30sp"
            android:layout_marginTop="-50dp"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="360dp"
            android:layout_height="54dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="Enter email"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="360dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="Enter password"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:password="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#9955bb"
            android:text="@string/loginbtn"
            android:textSize="22dp"
            app:cornerRadius="10dp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:indeterminateTint="#7b68ee"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/account1"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>